--- a/tbms/src/frontend/templates/administration/servers.html
+++ b/tbms/src/frontend/templates/administration/servers.html
@@ -5,8 +5,10 @@
     <title>Administration</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/collapseCSS.css' )}}"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='scripts/collapseJS.js') }}"></script>
 </head>
 
 <header>
@@ -65,7 +67,7 @@
 
 <!-- Server Overlay Window -->
 <div id="serverOverlay" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog"  style="width: 50%; height: 50%; max-height: 50%">
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header" align="center" style="background-color: #B8D0E4;">
@@ -117,10 +119,11 @@
             <li><a href="{{ url_for('admin_statistics') }}"><img src="{{ url_for('static', filename='images/statistics_icon.png') }}"></a></li>
             <li><a href="{{ url_for('admin_user_profiles') }}"><img src="{{ url_for('static', filename='images/user_profiles_icon.png') }}"></a></li>
         </div>
-    </div>
+    </div> <!-- Sidebar -->
 
-    <div class="panel panel-default col-md-10" style="border-right-color: black; border-left-color: black; height: 100%; margin-bottom: 0px;">
-        <div class="panel-body">
+    <div class="panel panel-default col-md-10" style="border-right-color: black; border-left-color: black; max-height: 100%; height: 100%; margin-bottom: 0px;">
+        <div class="panel-body" style="height: 100%;">
+
             <nav class="navbar navbar-default" style="background-color: #ffffff; border-color: #ffffff;">
                 <div class="container-fluid">
                     <div class="navbar-header">
@@ -148,22 +151,23 @@
                 </div>
                 </div><!-- /.container-fluid -->
             </nav>
-            <div class="panel panel-default" style="background-color: #FCFCFC; border-color: black">
+
+            <div class="panel panel-default" style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
                 <div class="panel-heading" style="background-color: #BCD3E6;" align="center"><strong>Servers</strong></div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="max-height: 94%; overflow-y: scroll;">
                         <table class="table">
                             <thead>
                             <tr>
-                                <th scope="col" align="center">
+                                <th class="col-sm-1" scope="col" align="center">
                                     <input type="checkbox">
                                 </th>
-                                <th scope="col" align="center">
+                                <th class="col-sm-9" scope="col" align="center">
                                     <strong>Server IP Address</strong>
-                                    <span class="caret" style="color: #2F80C1;"></span>
+                                    <i class="table-sort-button glyphicon glyphicon-triangle-bottom"></i>
                                 </th>
-                                <th scope="col" align="center">
+                                <th class="col-sm-2" scope="col" align="center">
                                     <strong>Status</strong>
-                                    <span class="caret" style="color: #2F80C1;"></span>
+                                    <i class="table-sort-button glyphicon glyphicon-triangle-bottom"></i>
                                 </th>
                             </tr>
                             </thead>
@@ -172,22 +176,113 @@
                                 <th scope="row">
                                     <input type="checkbox">
                                 </th>
-                                <td>IP</td>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow1"></i>
+                                    <a>127.0.0.1</a>
+                                </td>
                                 <td>Status</td>
+                            </tr>
+                            <tr id="idOfRow1" class="collapse out">
+                                <td></td>
+                                <td>
+                                    Workshop Groups:<br>
+                                    <ul>
+                                        <li><a>Workshop Group A</a></li>
+                                    </ul>
+                                    Workshop Units:<br>
+                                    <ul>
+                                        <li><a>Workshop Unit A</a></li>
+                                    </ul>
+                                    Workshop Units(Standalone):<br>
+                                    <ul>
+                                        <li><a>Workshop Unit C</a></li>
+                                    </ul>
+                                </td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th scope="row">
                                     <input type="checkbox">
                                 </th>
-                                <td>IP</td>
+                                <td>
+                                    <i data-toggle="collapse" data-target="#idOfRow2" class="table-drop-button glyphicon glyphicon-triangle-right"></i>
+                                    <a>127.0.0.2</a>
+                                </td>
                                 <td>Status</td>
+                            </tr>
+                            <tr id="idOfRow2" class="collapse out">
+                                <td></td>
+                                <td>
+                                    Workshop Groups:<br>
+                                    <ul>
+                                        <li><a>Workshop Group A</a></li>
+                                    </ul>
+                                    Workshop Units:<br>
+                                    <ul>
+                                        <li><a>Workshop Unit A</a></li>
+                                    </ul>
+                                    Workshop Units(Standalone):<br>
+                                    <ul>
+                                        <li><a>Workshop Unit C</a></li>
+                                    </ul>
+                                </td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <th scope="row">
                                     <input type="checkbox">
                                 </th>
-                                <td>IP</td>
+                                <td>
+                                    <i data-toggle="collapse" data-target="#idOfRow3" class="table-drop-button glyphicon glyphicon-triangle-right"></i>
+                                    <a>127.0.0.3</a>
+                                </td>
                                 <td>Status</td>
+                            </tr>
+                            <tr id="idOfRow3" class="collapse out">
+                                <td></td>
+                                <td>
+                                    Workshop Groups:<br>
+                                    <ul>
+                                        <li><a>Workshop Group A</a></li>
+                                    </ul>
+                                    Workshop Units:<br>
+                                    <ul>
+                                        <li><a>Workshop Unit A</a></li>
+                                    </ul>
+                                    Workshop Units(Standalone):<br>
+                                    <ul>
+                                        <li><a>Workshop Unit C</a></li>
+                                    </ul>
+                                </td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <input type="checkbox">
+                                </th>
+                                <td>
+                                    <i data-toggle="collapse" data-target="#idOfRow4" class="table-drop-button glyphicon glyphicon-triangle-right"></i>
+                                    <a>127.0.0.4</a>
+                                </td>
+                                <td>Status</td>
+                            </tr>
+                            <tr id="idOfRow4" class="collapse out">
+                                <td></td>
+                                <td>
+                                    Workshop Groups:<br>
+                                    <ul>
+                                        <li><a>Workshop Group A</a></li>
+                                    </ul>
+                                    Workshop Units:<br>
+                                    <ul>
+                                        <li><a>Workshop Unit A</a></li>
+                                    </ul>
+                                    Workshop Units(Standalone):<br>
+                                    <ul>
+                                        <li><a>Workshop Unit C</a></li>
+                                    </ul>
+                                </td>
+                                <td></td>
                             </tr>
                             </tbody>
                         </table>
