--- a/tbms/src/frontend/templates/administration/statistics.html
+++ b/tbms/src/frontend/templates/administration/statistics.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Administration</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" type="text/css"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/collapseCSS.css' )}}"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='scripts/collapseJS.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='scripts/canvas.js')}}"></script>
 </head>
 
@@ -83,41 +84,147 @@
                 src="{{ url_for('static', filename='images/user_profiles_icon.png') }}"></a></li>
     </div>
 </div>
+
 <div class="panel panel-default col-md-10"
      style="border-right-color: black; border-left-color: black; height: 100%; margin-bottom: 0px;">
-    <div class="panel panel-default col-sm-5"
-         style="margin-top: 8px; max-height: 50%; height: 50%; background-color: #FCFCFC; border-color: black">
-        <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong>Workshop
-            Groups and Units</strong></div>
-        <div class="panel-body">
-            dfasfsdf
-        </div>
-    </div>
-    <div class="col-sm-2" align="center" style="max-height: 50%; height: 50%;">
-        <table style="height: 100%;"><!-- Table used for Vertical Align -->
-            <tbody>
-            <tr>
-                <td class="align-middle">
-                    <button type="button" class="btn btn-default align-middle"
-                            style="background-color: #ECECEC; margin-bottom: 5px; width: 100px;"> >>
-                    </button>
-                    <br><br>
-                    <button type="button" class="btn btn-default align-middle"
-                            style="background-color: #ECECEC; margin-bottom: 5px; width: 100px;"> <<
-                    </button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="panel panel-default col-sm-5"
-         style="margin-top: 8px; max-height: 50%; height: 50%; background-color: #FCFCFC; border-color: black">
-        <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong> Selected
-            Workshop Groups and Units</strong></div>
-        <div class="panel-body">
-            fdsafsdfa
-        </div>
-    </div>
+    <table style="width: 100%; height: 55%; max-height: 55%;">
+        <tbody style="height: 100%; max-height: 100%;">
+        <tr style="height: 100%; max-height: 100%;">
+            <td class="col-sm-5" style="height: 100%; max-height: 100%;">
+                <div class="panel panel-default"
+                     style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
+                    <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong>Available
+                        Virtual Machines</strong></div>
+                    <div class="panel-body" style="height: 90%; max-height: 90%; overflow-y: scroll;">
+                        <table class="table selectable-table">
+                            <thead>
+                            <td>
+                                <i class="table-drop-button glyphicon glyphicon-triangle-right"
+                                   data-toggle="collapse"
+                                   data-target=".idOfRow1"></i>
+                                <strong>Workshop Groups</strong>
+                            </td>
+                            </thead>
+                            <tbody>
+                            <tr class="collapse out idOfRow1 clickable-row">
+                                <td>
+                                    Workshop Group A
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow1 clickable-row">
+                                <td>
+                                    Workshop Group B
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow1 clickable-row">
+                                <td>
+                                    Workshop Group C
+                                </td>
+                            </tr>
+                            </tbody>
+                            <thead>
+                            <td>
+                                <i class="table-drop-button glyphicon glyphicon-triangle-right"
+                                   data-toggle="collapse"
+                                   data-target=".idOfRow2"></i>
+                                <strong>Standalone Workshop Units</strong>
+                            </td>
+                            </thead>
+                            <tbody>
+                            <tr class="collapse out idOfRow2 clickable-row">
+                                <td>
+                                    Workshop Unit A
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow2 clickable-row">
+                                <td>
+                                    Workshop Unit B
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </td>
+            <td class="col-sm-2">
+                <div align="center">
+                    <table style="height: 100%;"><!-- Table used for Vertical Align -->
+                        <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <button type="button" class="btn btn-default align-middle"
+                                        style="background-color: #ECECEC;"> >>
+                                </button>
+                                <br><br>
+                                <button type="button" class="btn btn-default align-middle"
+                                        style="background-color: #ECECEC;"> <<
+                                </button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </td>
+            <td class="col-sm-5" style="height: 100%; max-height: 100%;">
+                <div class="panel panel-default"
+                     style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
+                    <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong>
+                        Selected
+                        Virtual Machines</strong></div>
+                    <div class="panel-body" style="height: 90%; max-height: 90%; overflow-y: scroll;">
+                        <table class="table selectable-table">
+                            <thead>
+                            <td>
+                                <i class="table-drop-button glyphicon glyphicon-triangle-right"
+                                   data-toggle="collapse"
+                                   data-target=".idOfRow1a"></i>
+                                <strong>Workshop Groups</strong>
+                            </td>
+                            </thead>
+                            <tbody>
+                            <tr class="collapse out idOfRow1a clickable-row">
+                                <td>
+                                    Workshop Group A
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow1a clickable-row">
+                                <td>
+                                    Workshop Group B
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow1a clickable-row">
+                                <td>
+                                    Workshop Group C
+                                </td>
+                            </tr>
+                            </tbody>
+                            <thead>
+                            <td>
+                                <i class="table-drop-button glyphicon glyphicon-triangle-right"
+                                   data-toggle="collapse"
+                                   data-target=".idOfRow2a"></i>
+                                <strong>Standalone Workshop Units</strong>
+                            </td>
+                            </thead>
+                            <tbody>
+                            <tr class="collapse out idOfRow2a clickable-row">
+                                <td>
+                                    Workshop Unit A
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow2a clickable-row">
+                                <td>
+                                    Workshop Unit B
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
     <div class="panel panel-default col-sm-12"
          style="max-height: 40%; height: 40%; background-color: #E1EBF4; border-color: black"><!-- Donut Graph Area -->
         <div class="panel-heading"
