--- a/tbms/src/frontend/templates/users/registered/temporary_workshops.html
+++ b/tbms/src/frontend/templates/users/registered/temporary_workshops.html
@@ -5,8 +5,10 @@
     <title>User</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/collapseCSS.css' )}}"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='scripts/collapseJS.js') }}"></script>
 </head>
 
 <header>
@@ -88,8 +90,10 @@
             <li><a href="{{ url_for('users_registered_persistence_workshops') }}"><img src="{{ url_for('static', filename='images/persistence_workshops_icon.png') }}"></a></li>
         </div>
     </div>
-    <div class="panel panel-default col-md-10" style="border-right-color: black; border-left-color: black; height: 100%; margin-bottom: 0px;">
-        <div class="panel-body">
+
+    <div class="panel panel-default col-md-10" style="border-right-color: black; border-left-color: black; max-height: 100%; height: 100%; margin-bottom: 0px;">
+        <div class="panel-body" style="height: 100%;">
+
             <nav class="navbar navbar-default" style="background-color: #ffffff; border-color: #ffffff;">
                 <div class="container-fluid">
                     <div class="navbar-header">
@@ -127,31 +131,207 @@
                 </div>
                 </div><!-- /.container-fluid -->
             </nav>
-            <div class="panel panel-default" style="background-color: #FCFCFC; border-color: black">
+
+            <div class="panel panel-default" style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
                 <div class="panel-heading" style="background-color: #BCD3E6;" align="center"><strong>Temporary Workshops</strong></div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="max-height: 94%; overflow-y: scroll;">
                         <table class="table">
                             <thead>
                             <tr>
-                                <th scope="col" align="center">
+                                <th class="col-sm-6" scope="col" align="center">
                                     <strong>Workshop Title</strong>
-                                    <span class="caret" style="color: #2F80C1;"></span>
+                                    <i class="table-sort-button glyphicon glyphicon-triangle-bottom"></i>
                                 </th>
-                                <th scope="col" align="center">
+                                <th class="col-sm-3" scope="col" align="center">
                                     <strong>No. of Available Sessions</strong>
-                                    <span class="caret" style="color: #2F80C1;"></span>
+                                    <i class="table-sort-button glyphicon glyphicon-triangle-bottom"></i>
                                 </th>
-                                <th scope="col" align="center">
+                                <th class="col-sm-3" scope="col" align="center">
                                     <strong>Published Date</strong>
-                                    <span class="caret" style="color: #2F80C1;"></span>
+                                    <i class="table-sort-button glyphicon glyphicon-triangle-bottom"></i>
                                 </th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
-                                <td><a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a></td>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow1"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
                                 <td>2</td>
                                 <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow1" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow2"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow2" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow3"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow3" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow4"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow4" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow5"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow5" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow6"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow6" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow7"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow7" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow8"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow8" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="table-drop-button glyphicon glyphicon-triangle-right" data-toggle="collapse" data-target="#idOfRow9"></i>
+                                    <a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a>
+                                </td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                            </tr>
+                            <tr id="idOfRow9" class="collapse out">
+                                <td>
+                                    Description:<br>
+                                    <p>
+                                        This is th dscription blah blah blah blahhfsjakhflkjsdfkjalshfjksah fasnhfvlkjn jkfsad fkljnsk fnksfhasjek najkdhf kjs
+                                        fsda vjfkshflashkf lncsahkfc
+                                        fsdavjfsancflsahfsjlksha clnfhjssalj
+                                    </p>
+                                </td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             </tbody>
                         </table>
