Tying to fix some positioning issues. -Emmanuel

--- a/tbms/src/frontend/templates/administration/statistics.html
+++ b/tbms/src/frontend/templates/administration/statistics.html
@@ -142,6 +142,51 @@
                                 </td>
                             </tr>
                             </tbody>
+                            <thead>
+                            <td>
+                                <i class="table-drop-button glyphicon glyphicon-triangle-right"
+                                   data-toggle="collapse"
+                                   data-target=".idOfRow1"></i>
+                                <strong>Workshop Groups</strong>
+                            </td>
+                            </thead>
+                            <tbody>
+                            <tr class="collapse out idOfRow1 clickable-row">
+                                <td>
+                                    Workshop Group A
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow1 clickable-row">
+                                <td>
+                                    Workshop Group B
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow1 clickable-row">
+                                <td>
+                                    Workshop Group C
+                                </td>
+                            </tr>
+                            </tbody>
+                            <thead>
+                            <td>
+                                <i class="table-drop-button glyphicon glyphicon-triangle-right"
+                                   data-toggle="collapse"
+                                   data-target=".idOfRow2"></i>
+                                <strong>Standalone Workshop Units</strong>
+                            </td>
+                            </thead>
+                            <tbody>
+                            <tr class="collapse out idOfRow2 clickable-row">
+                                <td>
+                                    Workshop Unit A
+                                </td>
+                            </tr>
+                            <tr class="collapse out idOfRow2 clickable-row">
+                                <td>
+                                    Workshop Unit B
+                                </td>
+                            </tr>
+                            </tbody>
                         </table>
                     </div>
                 </div>
