--- a/tbms/src/frontend/templates/administration/user_profiles.html
+++ b/tbms/src/frontend/templates/administration/user_profiles.html
@@ -180,7 +180,7 @@
     <div class="panel panel-default col-md-10" style="border-right-color: black; border-left-color: black; max-height: 100%; height: 100%; margin-bottom: 0px;">
         <div class="panel-body" style="height: 100%;">
 
-            <nav class="navbar navbar-default" style="background-color: #ffffff; border-color: #ffffff;">
+            <nav class="navbar navbar-default" style="background-color: #ffffff; border-color: #ffffff; margin-bottom: 0px;">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <ul class="nav navbar-nav navbar-left">
@@ -210,7 +210,7 @@
 
             <div class="panel panel-default" style="background-color: #FCFCFC; border-color: black; max-height: 90%; height: 90%;">
                 <div class="panel-heading" style="background-color: #BCD3E6;" align="center"><strong>User Profiles</strong></div>
-                    <div class="panel-body" style="max-height: 94%; overflow-y: scroll;">
+                    <div class="panel-body" style="max-height: 92%; overflow-y: scroll;">
                         <table class="table">
                             <thead>
                             <tr>
