--- a/tbms/src/frontend/templates/login.html
+++ b/tbms/src/frontend/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
@@ -25,27 +25,26 @@
     </nav>
 </header>
 
-<body>
-
-</div>
-    <div class="col-sm-4">
-      <div class="panel panel-default" style="border-color: black">
-          <div class="panel-heading" style="background-color: #BCD3E6;"><strong>Log in: Already have an Account</strong></div>
-        <div class="panel-body" align="left">
+<body style="height: calc(100% - 52px);">
+    <div class="col-sm-4" style="height: 90%;">
+      <div class="panel panel-default" style="border-color: black; height: 100%;">
+          <div class="panel-heading" align="center" style="background-color: #BCD3E6;"><strong>Log in: Already have an Account</strong></div>
+        <div class="panel-body" align="left" style="height: 90%;">
             <form class="navbar-form" action="{{ url_for('admin_servers') }}" method="POST">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Username"><br>
                     <input type="password" class="form-control" placeholder="Password"><br><br>
-                    <button type="submit" class="btn btn-default">Log in</button>
+                    <button type="submit" class="btn btn-default">Log in</button><br><br>
+                    <a>Forgot your password</a>
                 </div>
             </form>
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
-      <div class="panel panel-default" style="border-color: black">
-          <div class="panel-heading" style="background-color: #BCD3E6;"><strong>Register: Don't have an Account</strong></div>
-        <div class="panel-body" align="left">
+    <div class="col-sm-4" style="height: 90%;">
+      <div class="panel panel-default" style="border-color: black; height: 100%;">
+          <div class="panel-heading"  align="center" style="background-color: #BCD3E6;"><strong>Register: Don't have an Account</strong></div>
+        <div class="panel-body" align="left" style="height: 90%;">
             <form class="navbar-form" action="{{ url_for('users_registered_temporary_workshops') }}" method="POST">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="First Name"><br>
@@ -64,10 +63,10 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
-      <div class="panel panel-default" style="border-color: black">
-          <div class="panel-heading" style="background-color: #BCD3E6;"><strong>Guest Log in: Prefer not to Register</strong></div>
-        <div class="panel-body" align="center">
+    <div class="col-sm-4" style="height: 90%;">
+      <div class="panel panel-default" style="border-color: black; height: 100%;">
+          <div class="panel-heading" align="center" style="background-color: #BCD3E6;"><strong>Guest Log in: Prefer not to Register</strong></div>
+        <div class="panel-body" align="center" style="height: 90%;">
             <form class="navbar-form" action="{{ url_for('users_guest_temporary_workshops') }}" method="POST">
                 <div class="form-group">
                     <button type="submit" class="btn btn-default">Guest Log in</button>
@@ -76,6 +75,5 @@
         </div>
       </div>
     </div>
-</div>
 </body>
 </html>
