--- a/tbms/src/frontend/templates/administration/servers.html
+++ b/tbms/src/frontend/templates/administration/servers.html
@@ -110,6 +110,9 @@
 </div>
 
 <body style="height: calc(100% - 52px);">
+<div class="col-sm-12" align="center">
+  <strong style="color: red;">{{ page_error }}</strong>
+</div>
     <div class="sidebar col-md-2">
         <div class="nav nav-pills nav-stacked">
             <li class="active"><a href="{{ url_for('admin_servers') }}" style="background-color: #B8D0E4;"><img src="{{ url_for('static', filename='images/servers_icon.png') }}"></a></li>
