--- a/tbms/src/frontend/templates/administration/statistics.html
+++ b/tbms/src/frontend/templates/administration/statistics.html
@@ -68,6 +68,9 @@
 </header>
 
 <body style="height: calc(100% - 52px);">
+<div class="col-sm-12" align="center">
+  <strong style="color: red;">{{ page_error }}</strong>
+</div>
 <div class="sidebar col-md-2">
     <div class="nav nav-pills nav-stacked">
         <li><a href="{{ url_for('admin_servers') }}"><img
