--- a/tbms/src/frontend/templates/administration/user_profiles.html
+++ b/tbms/src/frontend/templates/administration/user_profiles.html
@@ -166,6 +166,9 @@
 </div>
 
 <body style="height: calc(100% - 52px);">
+<div class="col-sm-12" align="center">
+  <strong style="color: red;">{{ page_error }}</strong>
+</div>
     <div class="sidebar col-md-2">
         <div class="nav nav-pills nav-stacked">
             <li><a href="{{ url_for('admin_servers') }}"><img src="{{ url_for('static', filename='images/servers_icon.png') }}"></a></li>
