--- a/tbms/src/frontend/templates/login.html
+++ b/tbms/src/frontend/templates/login.html
@@ -26,6 +26,9 @@
 </header>
 
 <body style="height: calc(100% - 52px);">
+<div class="col-sm-12" align="center">
+  <strong style="color: red;">{{ page_error }}</strong>
+</div>
     <div class="col-sm-4" style="height: 90%;">
       <div class="panel panel-default" style="border-color: black; height: 100%;">
           <div class="panel-heading" align="center" style="background-color: #BCD3E6;"><strong>Log in: Already have an Account</strong></div>
@@ -36,7 +39,7 @@
                     <input type="password" class="form-control" name="password" placeholder="Password"><br><br>
                     <button type="submit" class="btn btn-default">Log in</button><br><br>
                     <a>Forgot your password</a><br><br>
-                    <strong style="color: red;">{{ error }}</strong>
+                    <strong style="color: red;">{{ login_error }}</strong>
                 </div>
             </form>
         </div>
@@ -58,7 +61,8 @@
                     <input type="radio" class="form-control"> Novice<br>
                     <input type="radio" class="form-control"> Intermediate<br>
                     <input type="radio" class="form-control"> Advanced<br><br>
-                    <button type="submit" class="btn btn-default">Register</button>
+                    <button type="submit" class="btn btn-default">Register</button><br><br>
+                    <strong style="color: red;">{{ register_error }}</strong>
                 </div>
             </form>
         </div>
